# mcp-tofu

./: CLAUDE.md  Justfile  PLAN.md  README.md  main.py  pyproject.toml
.claude/hooks/: pre_commit_checks.py  pre_tool_use_action_router.py
.claude/memory/: fastmcp2.md
.claude/memory-template/: mermaid-validation-practices.md
.github/: copilot-instructions.md
mcp/config/: settings.py
mcp/utils/: errors.py
